--- a/Superman/superman.html
+++ b/Superman/superman.html
@@ -15,7 +15,7 @@
 					<li><a href="#banner">ABOUT</a></li>
                    <li><a href="#trailer">TRAILER</a></li>
                    <li><a href="#best">BEST</a></li>
-                    <li class="logo"><a href="#"><img src="./image/Logo.png"></a></li>
+                    <li class="logo"><a href="#"><img src="./image/logo.png"></a></li>
                     <li><a href="#">CHARACTER</a></li>
                     <li><a href="#">GAME</a></li>
                     <li><a href="#">SHOP</a></li>
