--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 		<section class="content01">
 			<div class="con_text_box1">
 				<p class="con_title1">
-					UMBRA<br> HOME, SUBPAGE<br>DESIGN, CORDING</p>
+					UMBRA<br> HOME, SUBPAGE<br>DESIGN, CODING</p>
 				<p class="con_txt1">
 					홈&리빙 브랜드인 UMBRA 사의 홈페이지, 서브페이지 디자인입니다.<br>
 					전반적인 제품들이 가지고 있는 파스텔톤을 메인컬러로 정하여<br>
@@ -77,7 +77,7 @@
 		<section class="content02">
 			<div class="con_text_box2">
 				<p class="con_title">
-					DDP<br> HOME PAGE<br>DESIGN, CORDING</p>
+					DDP<br> HOME PAGE<br>DESIGN, CODING</p>
 				<p class="con_txt">
 					동대문디자인플라자의 홈페이지입니다. 2명으로 구성된 팀작업입니다.<br>
 					간결하고 심플한 건축외형이 특징을 모티브로 디자인하였습니다.</p>
@@ -91,7 +91,7 @@
 		<section class="content03">
 			<div class="con_text_box1">
 				<p class="con_title">
-					COHEN<br> HOM PAGE<br>DESIGN</p>
+					COHEN<br> HOME PAGE<br>RE-DESIGN</p>
 				<p class="con_txt">
 					가구브랜드 코헨사의 홈페이지 리디자인입니다.<br>
 					정렬되지 않은 기존 사이트를 제품이미지에 맞도록 심플하게 리디자인했습니다.</p>
@@ -103,7 +103,7 @@
 		<section class="content04">
 			<div class="con_text_box2">
 				<p class="con_title">
-					CROODS<br>ONE PAGE<br>DESIGN, CORDING</p>
+					CROODS<br>ONE PAGE<br>DESIGN, CODING</p>
 				<p class="con_txt">
 					드림웍스 애니매이션 크루즈패밀리의 원페이지 디자인입니다.<br>
 					캐릭터들의 개성만큼 비비드한컬러, 자유로운 이미지배치를 하여 만들었습니다.</p>
@@ -115,7 +115,7 @@
 		<section class="content05">
 			<div class="con_text_box1">
 				<p class="con_title">
-					SUPERMAN vs BATTMAN<br>ONE PAGE<br>DESIGN, CORDING</p>
+					SUPERMAN vs BATTMAN<br>ONE PAGE<br>DESIGN, CODING</p>
 				<p class="con_txt">
 					DC코믹스의 슈퍼맨vs배트맨 영화의 원페이지 디자인입니다.<br>
 					다크한 분위기에 블루계열의 포인트컬러를 살려 만들었습니다.</p>
