--- a/index.html
+++ b/index.html
@@ -10,22 +10,17 @@
 	
 	
     <body>
-    <header>  </header>
-		
-		
+    <header>  
 		<section class="main">
-			<div class="main_box">
-				<h1><span>W</span>ELCOME<br>MY<br>PORTFOLIO</h1>
+			<h1>WEL<span>C</span>OME<br>MY<br>PORTFOLIO</h1>
 				<a href="#" class="main_more">VIEW WORKS ▾</a>
-			</div>
 		</section>
 		
-		
-		
+		<div class="com1">
 		<section class="competence clearfixafter">
 			<h2>COMPETENCE</h2>
 			<div class="icon_box">
-				<img src="images/icon1.png">
+				<img src="images/icon_01.png">
 				<p class="icon_title">PHOTOSHOP</p>
 				<p class=icon_txt>이미지 합성, 이미지 및 색감 보정<br>
 					같은 기본적인 편집 작업에서부터 <br>카탈로그나 웹디자인 등의 이미지를 <br>
@@ -33,7 +28,7 @@
 			</div>
 			
 			<div class="icon_box">
-				<img src="images/icon2.png">
+				<img src="images/icon_02.png">
 				<p class="icon_title">ILLUSTRATION</p>
 				<p class=icon_txt>일러스트 툴을 적극적으로 활용하여<br>
 					 CI, BI 이미지 등을 창작할수 있습니다.<br>
@@ -43,7 +38,7 @@
 			</div>
 			
 			<div class="icon_box">
-				<img src="images/icon3.png">
+				<img src="images/icon_03.png">
 				<p class="icon_title">HTML</p>
 				<p class=icon_txt>HTML코딩으로 기본적인<br>
 					웹사이트를 만드는것이 가능하며 <br> 기존 사이트의 이미지, 텍스트 변경<br>
@@ -51,14 +46,16 @@
 			</div>
 			
 			<div class="icon_box">
-				<img src="images/icon4.png">
+				<img src="images/icon_04.png">
 				<p class="icon_title">CSS</p>
 				<p class=icon_txt> 글꼴변경, 배경색, 이미지의 너비,<br>
 					높이 또는 위치를 지정하거나<br> 경우에 따라서 화면을 다르게
 					<br>표시될 수 있도록 지정할 수 있습니다.
 			</div>
 		</section>
-        
+		</div>
+	</header>
+		
 		
 		<section class="content01">
 			<div class="con_text_box1">
