--- a/index.html
+++ b/index.html
@@ -15,45 +15,6 @@
 			<h1>WEL<span>C</span>OME<br>MY<br>PORTFOLIO</h1>
 				<a href="#" class="main_more">VIEW WORKS ▾</a>
 		</section>
-		
-		<div class="com1">
-		<section class="competence clearfixafter">
-			<h2>COMPETENCE</h2>
-			<div class="icon_box">
-				<img src="images/icon_01.png">
-				<p class="icon_title">PHOTOSHOP</p>
-				<p class=icon_txt>이미지 합성, 이미지 및 색감 보정<br>
-					같은 기본적인 편집 작업에서부터 <br>카탈로그나 웹디자인 등의 이미지를 <br>
-					포토샵을 통해 구현할 수 있습니다.</p>
-			</div>
-			
-			<div class="icon_box">
-				<img src="images/icon_02.png">
-				<p class="icon_title">ILLUSTRATION</p>
-				<p class=icon_txt>일러스트 툴을 적극적으로 활용하여<br>
-					 CI, BI 이미지 등을 창작할수 있습니다.<br>
-					 보여지는 대부분의 시각적이미지를<br>
-					 그래픽화 하는데 어려움이 없습니다.
-				</p>
-			</div>
-			
-			<div class="icon_box">
-				<img src="images/icon_03.png">
-				<p class="icon_title">HTML</p>
-				<p class=icon_txt>HTML코딩으로 기본적인<br>
-					웹사이트를 만드는것이 가능하며 <br> 기존 사이트의 이미지, 텍스트 변경<br>
-					등 유지보수를 할 수 있습니다.</p>
-			</div>
-			
-			<div class="icon_box">
-				<img src="images/icon_04.png">
-				<p class="icon_title">CSS</p>
-				<p class=icon_txt> 글꼴변경, 배경색, 이미지의 너비,<br>
-					높이 또는 위치를 지정하거나<br> 경우에 따라서 화면을 다르게
-					<br>표시될 수 있도록 지정할 수 있습니다.
-			</div>
-		</section>
-		</div>
 	</header>
 		
 		
@@ -66,8 +27,11 @@
 					전반적인 제품들이 가지고 있는 파스텔톤을 메인컬러로 정하여<br>
 					산뜻한 분위기의 사이트를 만들었습니다.</p>
 				<p class="work1">*작품기여도 100%</p>
-				<a href="umbra/main/index1.html" class="more">HOME PAGE</a>
-				<a href="umbra/sub/sub.html" class="more">SUB PAGE</a>
+				
+				<div class="more_box">
+					<a href="umbra/main/index1.html" class="more">HOME PAGE</a>
+					<a href="umbra/sub/sub.html" class="more">SUB PAGE</a>
+				</div>
 			</div>
 		</section>
 		
